<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".StartGameActivity">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/playername"
            android:layout_below="@+id/playGround" android:layout_alignRight="@+id/playGround"
            android:layout_alignEnd="@+id/playGround" android:layout_marginTop="10dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/yourPlaying"
            android:gravity="center_horizontal"
            android:id="@+id/textView" android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/emptyString"
            android:id="@+id/playGround" android:layout_below="@+id/textView" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_alignRight="@+id/textView"
            android:layout_alignEnd="@+id/textView" android:gravity="center"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/enterName"
            android:id="@+id/textView2"
            android:layout_alignBottom="@+id/playername" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_alignTop="@+id/playername"
            android:layout_toStartOf="@+id/playername"
            android:gravity="center_vertical" android:layout_marginTop="10dp"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/chooseGame"
              android:id="@+id/textView3"
              android:gravity="center_vertical"
              android:layout_below="@+id/textView2" android:layout_alignParentLeft="true"
              android:layout_alignParentStart="true" android:layout_marginTop="10dp"
              android:layout_toLeftOf="@+id/gameSpinner" android:layout_toStartOf="@+id/gameSpinner"/>
    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gameSpinner" android:layout_alignTop="@+id/textView3" android:layout_alignLeft="@+id/playername"
            android:layout_alignStart="@+id/playername" android:layout_marginTop="10dp"/>
    <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollViewGameDetails" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/playGround" android:layout_alignEnd="@+id/playGround"
            android:layout_above="@+id/startGameButton" android:layout_below="@+id/gameSpinner"
            android:layout_marginTop="30dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/emptyString"
                android:id="@+id/gameDetails" android:layout_centerVertical="true" android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>
    </ScrollView>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startGame"
            android:text="@string/startGame"
            android:id="@+id/startGameButton" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"/>

</RelativeLayout>
